# LogiPathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  ExternalDependencies.cmake
cmake_modules/: CompileShaders.cmake
include/: GPUTexture.hpp  Helpers.hpp  PTSceneConverter.hpp  RTXSceneConverter.hpp  Renderer.hpp  RendererCore.hpp  RendererPT.h  RendererRTX.h  SceneGPUConverter.hpp  SceneLoader.hpp
remote_rendering/: App.js  MicroRenderer.js  index.html  old_index.js_old  package-lock.json  package.json
resources/: cornell_box.gltf  outside.gltf  room.gltf  scene.gltf
shaders/: closesthit.rchit  constants.h  heitz_microfacet.h  miss.rmiss  path_tracing.comp  ray.h  raygen.rgen  tex_to_quad.frag  tex_to_quad.vert
shaders/basic/: BSDF.glsl
shaders/common/: constants.glsl  constants.h  random.glsl  random.h  ray.glsl  util.glsl  util.h
shaders/heitz/: BSDF.glsl  heitz_microfacet.h  interaction_type.glsl
shaders/rtx/: closesthit.rchit  miss.rmiss  raygen.rgen  uniforms.glsl  uniforms.h
src/: Helpers.cpp  Main.cpp  PTSceneConverter.cpp  RTXSceneConverter.cpp  Renderer.cpp  RendererCore.cpp  RendererPT.cpp  RendererRTX.cpp  SceneGPUConverter.cpp  SceneLoader.cpp
web/: index.html  source.js
